# filist

./: .gitignore  Fillist.spec  README.md  filist.py  pyproject.toml
dataBase/: film_base.db
design/: addFilmMenu.kv  customButtonWith2States.kv  fillist.kv  myDropDown.kv  myDropDownAddAndRedact.kv  myLayout.kv  myRating.kv  myScrolingMenu.kv  redactFilmMenu.kv
scripts/: FillistMainMenu.py  addFilmMenu.py  customButtonWith2States.py  filist.py  main.py  myDataBase.py  myDropDown.py  myDropDownAddAndRedact.py  myLayout.py  myRating.py  myScrolingMenu.py  redactFilmMenu.py  utils.py
