[tool.poetry]
name = "ivan"
version = "0.1.0"
description = ""
authors = ["IvanKorolev <purpleguy15122005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kivy = "^2.3.1"
kivy-garden = "^0.1.5"
pyinstaller = {version = "^6.17.0", python = "<3.15"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
